--- a/penguinPERSONAL.html
+++ b/penguinPERSONAL.html
@@ -1,44 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./stylesPERSONAL.css" />
-    <title>Penguin</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
 
-  <body>
-    <div class="left-mountain"></div>
-    <div class="back-mountain"></div>
-    <div class="sun"></div>
-    <div class="penguin">
-      <div class="penguin-head">
-        <div class="face left"></div>
-        <div class="face right"></div>
-        <div class="chin"></div>
-        <div class="eye left">
-          <div class="eye-lid"></div>
-        </div>
-        <div class="eye right">
-          <div class="eye-lid"></div>
-        </div>
-        <div class="blush left"></div>
-        <div class="blush right"></div>
-        <div class="beak top"></div>
-        <div class="beak bottom"></div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./stylesPERSONAL.css" />
+  <title>Penguin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+  <!-- Snowflakes START -->
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <div class="snowflake"></div>
+  <!-- Snowflakes END -->
+
+  <div class="left-mountain"></div>
+  <div class="back-mountain"></div>
+  <div class="sun"></div>
+  <div class="pond"></div>
+
+  <!-- Signs START -->
+  <div class="sign sign-ice flex-column">
+    <div class="sign-wood flex-row">
+      🧊
+    </div>
+    <div class="sign-stick"></div>
+    <div class="sign-base"></div>
+  </div>
+
+  <div class="sign sign-snow flex-column">
+    <div class="sign-wood flex-row">
+      ❄️
+    </div>
+    <div class="sign-stick"></div>
+    <div class="sign-base"></div>
+  </div>
+
+  <div class="sign sign-woods flex-column">
+    <div class="sign-wood flex-row">
+      🧱
+    </div>
+    <div class="sign-stick"></div>
+    <div class="sign-base"></div>
+  </div>
+  <!-- Signs END -->
+
+  <!-- Elements START -->
+  <div class="ice-elements flex-row">
+    <div class="cube-01 visible"></div>
+    <div class="cube-02 visible"></div>
+    <div class="cube-03 visible"></div>
+  </div>
+
+  <div class="snow-elements flex-row">
+    <div class="snow-01 visible"></div>
+    <div class="snow-02 visible"></div>
+    <div class="snow-03 visible"></div>
+  </div>
+
+  <div class="pet-elements flex-row">
+    <div class="pet-01 visible"></div>
+    <div class="pet-02 visible"></div>
+    <div class="pet-03 visible"></div>
+  </div>
+
+  <!-- Elements END -->
+
+  <!-- Castle START -->
+  <div class="castle">
+    <div class="short-tower">
+      <div class="roof-small"></div>
+      <div class="cube"></div>
+      <div class="cube"></div>
+    </div>
+    <div class="high-tower">
+      <div class="roof-big"></div>
+      <div class="cube"></div>
+      <div class="cube"></div>
+      <div class="cube"></div>
+    </div>
+    <div class="door">
+      <div class="roof-bigger"></div>
+      <div class="cube"></div>
+    </div>
+    <div class="high-tower">
+      <div class="roof-big"></div>
+      <div class="cube"></div>
+      <div class="cube"></div>
+      <div class="cube"></div>
+    </div>
+    <div class="short-tower">
+      <div class="roof-small"></div>
+      <div class="cube"></div>
+      <div class="cube"></div>
+    </div>
+  </div>
+  <!-- Castle END -->
+
+  <!-- Pet START -->
+  <div class="pet">
+    <div class="horn-left">
+      <div class="left-small"></div>
+    </div>
+    <div class="horn-right">
+      <div class="right-small"></div>
+    </div>
+    <div class="pet-head">
+      <div class="pet-eye pet-eye-right">
+        <div class="eye-light-right"></div>
       </div>
-      <div class="shirt">
-        <div>💜</div>
-        <p>I CSS</p>
-      </div> 
-      <div class="penguin-body">
-        <div class="arm left"></div>
-        <div class="arm right"></div>
-        <div class="foot left"></div>
-        <div class="foot right"></div>
+      <div class="pet-eye pet-eye-left">
+        <div class="eye-light-left"></div>
+      </div>
+      <div class="pet-nose">
+        <div class="nose-light"></div>
       </div>
     </div>
+    <div class="pet-body"></div>
+    <div class="pet-leg leg-01"></div>
+    <div class="pet-leg leg-02"></div>
+    <div class="pet-leg leg-03"></div>
+    <div class="pet-leg leg-04"></div>
+    <div class="tail"></div>
+  </div>
+  <!-- Pet END -->
 
-    <div class="ground"></div>
-  </body>
+  <!-- Snowman START -->
+  <div class="snowman flex-column">
+    <div class="snowman-head">
+      <div class="snowman-eye-left">
+        <div class="snowman-eye-pupil"></div>
+      </div>
+      <div class="snowman-eye-right">
+        <div class="snowman-eye-pupil"></div>
+      </div>
+      <div class="snowman-nose"></div>
+    </div>
+    <div class="snowman-middle">
+      <div class="snowman-arm snowman-left-arm"></div>
+      <div class="snowman-arm snowman-right-arm"></div>
+    </div>
+    <div class="snowman-bottom"></div>
+  </div>
+  <!-- Snowman END -->
+
+  <!-- Penguin START -->
+  <div class="penguin">
+    <div class="penguin-head">
+      <div class="face left"></div>
+      <div class="face right"></div>
+      <div class="chin"></div>
+      <div class="eye left">
+        <div class="eye-lid"></div>
+      </div>
+      <div class="eye right">
+        <div class="eye-lid"></div>
+      </div>
+      <div class="blush left"></div>
+      <div class="blush right"></div>
+      <div class="beak top"></div>
+      <div class="beak bottom"></div>
+    </div>
+    <div class="shirt">
+      🧊🧱❄️
+    </div>
+    <div class="penguin-body">
+      <div class="arm left"></div>
+      <div class="arm right"></div>
+      <div class="foot left"></div>
+      <div class="foot right"></div>
+    </div>
+  </div>
+  <!-- Penguin END -->
+  <div class="ground"></div>
+  <script src="index.js"></script>
+</body>
+
 </html>
