--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+  <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-18-Penguin/"></a></div>
+    <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-18-Penguin/original"></a></div>
   <!-- Snowflakes START -->
   <div class="snowflake"></div>
   <div class="snowflake"></div>
