--- a/original.html
+++ b/original.html
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-18-Penguin/"></a></div>
+    <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-18-Penguin/original"></a></div>
+    
     <div class="left-mountain"></div>
     <div class="back-mountain"></div>
     <div class="sun"></div>
